--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <div class="w3-container">
         <div id="titre_central"><h1 class=" w3-text-gray" style="text-shadow:1px 1px 0 #444">Iot : A l'exploration du phénoméne</h1></div>
     </div>
-    <div class="flex-container">
-        <img src="Css/Imgs/iot.jpg">
-        <section class="w3-card-2">
+    <div class="w3-row w3-container">
+        <div class="w3-half w3-container">
+                <img src="Css/Imgs/iot.jpg" style="height: auto !important; width: 100%;">    
+        </div>
+        <div class="w3-half w3-container">
             <p>Qu'est-ce que l'IoT (Internet des objets) ?</p>
             <p>L'Internet des objets ou IdO est l'interconnexion entre l'Internet et des objets, des lieux et des environnements physiques. L'appellation désigne un nombre croissant d'objets connectés à l'Internet permettant ainsi une communication entre nos biens dits physiques et leurs existences numériques.<br>
                 En termes simples, l'IoT (Internet des objets) fait référence à la tendance actuelle qui consiste à connecter tous types d'objets physiques à Internet, même les plus inattendus.
             </p>
-        </section>
+        </div>
     </div>
     <div class="w3-container">
         <ol type="I">
